--- a/santiago_papeleria_frontend/src/app/shared/header/header.component.html
+++ b/santiago_papeleria_frontend/src/app/shared/header/header.component.html
@@ -61,7 +61,7 @@
           </button>
 
           <!-- Carrito -->
-          <button class="header-action-btn cart-btn" aria-label="Carrito de compras">
+          <button class="header-action-btn cart-btn" aria-label="Carrito de compras" (click)="toggleCart()">
             <i class="fas fa-shopping-bag"></i>
           </button>
 
@@ -313,6 +313,8 @@
       </div>
     </div>
   </div>
+
+
 
 </header>
 
