Cambios Header, Precios de productos, perfil, Se añadio bodega, solo Visual

--- a/santiago_papeleria_frontend/src/app/pages/favorites/favorites.html
+++ b/santiago_papeleria_frontend/src/app/pages/favorites/favorites.html
@@ -98,7 +98,7 @@
 
                         <!-- Price -->
                         <div class="text-3xl font-bold text-[#0f4c75] mb-3">
-                            ${{ product.price | number:'1.2-2' }}
+                            ${{ product | displayPrice | number:'1.2-2' }}
                         </div>
 
                         <!-- Stock Badge -->
