--- a/santiago_papeleria_frontend/src/app/pages/register/register.html
+++ b/santiago_papeleria_frontend/src/app/pages/register/register.html
@@ -239,7 +239,7 @@
                             </div>
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-1">Teléfono del Negocio</label>
-                                <input type="text" placeholder="0987654321"
+                                <input type="text" formControlName="telefono_negocio" placeholder="0987654321"
                                     class="w-full rounded-lg border-gray-300 shadow-sm focus:border-brand-blue focus:ring-brand-blue px-4 py-2 border">
                             </div>
                         </div>
